k8s-manifests/dev/sample-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
  name: helloworld
  namespace: dev
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: helloworld
  annotations:
    fluxcd.io/automated: "true"
    #fluxcd.io/tag.podinfod: semver:~1.3
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: nginx
        image: gcr.io/operating-realm-241007/github.com/hulk0301/hello-world-app:1.3.0
        ports:
        - containerPort: 80
